# knot-service-source

./: .dockerignore  .gitignore  AUTHORS  CONTRIBUTING.md  Dockerfile  Makefile.am  Makefile.modules  README  README.md  acinclude.m4  bootstrap  bootstrap-configure  configure.ac
doc/: knotd-api.txt
docker/: system.conf
inetbr/: inet4.c  inet4.h  inet6.c  inet6.h  main.c  manager.c  manager.h  settings.c  settings.h  tcp4.c  tcp4.h  tcp6.c  tcp6.h  udp4.c  udp4.h  udp6.c  udp6.h  unix.h
json/: data-array.json  data-string.json  data-switch.json  data-temperature.json  data-volume.json  schema-array.json  schema-string.json  schema-temperature.json
nrf2serial/arduino/proxy/: proxy.ino
nrf2serial/host/: nrf2serial.cpp
src/: amqp.c  amqp.h  cloud.c  cloud.h  dbus.c  dbus.h  device.c  device.h  filewatch.c  filewatch.h  gatewayConfig.json  http.c  http.h  knot.conf  knotd.conf  log.c  log.h  main.c  manager.c  manager.h  mq.c  mq.h  msg.c  msg.h  node-serial.c  node-tcp6.c  node-unix.c  node.c  node.h  nrf24.c  nrfd.c  parser.c  parser.h  proto-http.c  proto-socketio.c  proto-ws.c  proto.c  proto.h  proxy.c  proxy.h  (+17 more)
test/: mock-connector.py  test-conn.py  test-settings
tools/: ktool.c
unit/: inettest.c  ktest.c
